--- a/C#/SinglyLinkedLists/.vscode/launch.json
+++ b/C#/SinglyLinkedLists/.vscode/launch.json
@@ -5,6 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "Launch Program",
+            "program": "${workspaceFolder}/app.js",
+            "request": "launch",
+            "skipFiles": [
+                "<node_internals>/**"
+            ],
+            "type": "node"
+        },
+
+        {
             "name": ".NET Core Launch (console)",
             "type": "coreclr",
             "request": "launch",
